--- a/Javascript-Quiz-main-main/index.html
+++ b/Javascript-Quiz-main-main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Title -->
-    <title>Snabbt Test Om Sverige</title>
+    <title>Snabbt Test Om Sverige ddddd</title>
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/app.css" />
     <!-- Favicon -->
